feat: initialise basic apis + db

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/blazey08/dClutter#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
